[package]
name = "server"
description = "The server that powers deployments via minions"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
actix-codec = "0.5.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
byteorder = "1.5.0"